# look-for

./: Backend.cpp  Backend.h  CMakeLists.txt  FoundFile.cpp  FoundFile.h  Main.qml  main.cpp
cpp/: Backend.cpp  Backend.h  FoundFile.cpp  FoundFile.h  main.cpp
qml/: Main.qml
qml/delegates/: ImageDelegate.qml  PathDelegate.qml
